--- a/template.yaml
+++ b/template.yaml
@@ -1,6 +1,17 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Resources:
-  VPC:
+  MyVPC:
     Type: AWS::EC2::VPC
     Properties:
       CidrBlock: 10.0.0.0/16
+      Tags:
+          - Key: "Name"
+            Value: "MyVPC"
+  PublicSubnet:
+    Type: AWS::EC2::Subnet
+    Properties:
+      CidrBlock: 10.0.1.0/24
+      VpcId: !Ref MyVPC
+      Tags:
+          - Key: "Name"
+            Value: "MyPublicSubnet"
