--- a/template.yaml
+++ b/template.yaml
@@ -71,6 +71,11 @@ Resources:
           IpProtocol: "tcp"
           FromPort: 8080
           ToPort: 8080
+        - CidrIp: 0.0.0.0/0
+          Description: "ICMP"
+          IpProtocol: "icmp"
+          FromPort: -1
+          ToPort: -1
       VpcId: !Ref MyVPC
   MyInstance:
     Type: "AWS::EC2::Instance"
@@ -178,4 +183,9 @@ Resources:
           IpProtocol: "tcp"
           FromPort: 3306
           ToPort: 3306
+        - CidrIp: 0.0.0.0/0
+          Description: "ICMP"
+          IpProtocol: "icmp"
+          FromPort: -1
+          ToPort: -1
       VpcId: !Ref MyVPC
