--- a/template.yaml
+++ b/template.yaml
@@ -216,3 +216,12 @@ Resources:
     Type: AWS::EC2::EIP
     Properties:
       Domain: vpc
+  MyNAT:
+    DependsOn: AttachGateway
+    Type: AWS::EC2::NatGateway
+    Properties:
+      AllocationId: !GetAtt NATEIP.AllocationId
+      SubnetId: !Ref MyPrivateSubnet
+      Tags:
+        - Key: Name
+          Value: MyNAT
