Fix Subnet that NAT places

--- a/template.yaml
+++ b/template.yaml
@@ -221,7 +221,7 @@ Resources:
     Type: AWS::EC2::NatGateway
     Properties:
       AllocationId: !GetAtt NATEIP.AllocationId
-      SubnetId: !Ref MyPrivateSubnet
+      SubnetId: !Ref MyPublicSubnet
       Tags:
         - Key: Name
           Value: MyNAT
